Added PropertyManagementServiceImplTest